Refactor ERD, remove address entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.maxRequestSize=100MB
 
 spring.servlet.multipart.enabled=true
+
+server.port = 5001
