--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-	implementation 'junit:junit:4.13.1'
+	implementation 'junit:junit:4.13.2'
 	implementation 'mysql:mysql-connector-java'
 
 	// mustache 의존성 추가
@@ -32,7 +32,10 @@ dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
 	implementation 'org.jetbrains:annotations:20.1.0'
 
-	// loombok 의존성 추가
+	//commons-io 의존성 추가
+	implementation 'commons-io:commons-io:2.9.0'
+
+	// lombok 의존성 추가
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
