--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.servlet.multipart.maxRequestSize=100MB
 spring.servlet.multipart.enabled=true
 
 server.port = 5010
+
+spring.profiles.include=oauth
