--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-#mysql ??
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/usedInstMarket?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=dhqxlajtm4@
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
@@ -12,7 +6,9 @@ spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.maxRequestSize=100MB
 
 spring.servlet.multipart.enabled=true
-
+# port? ??
 server.port = 5010
 
-spring.profiles.include=oauth
+spring.profiles.include=oauth,datasource
+# swagger ?? ?? ??
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
