Add spring session dependency and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ server.port = 5010
 spring.profiles.include=oauth,datasource
 # swagger ?? ?? ??
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#session
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema= always
