--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
 	//oauth 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.session:spring-session-jdbc'
 
 	// lombok 의존성 추가
 	compileOnly 'org.projectlombok:lombok'
