Refactor securityConfig and make access level of controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,15 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.maxRequestSize=100MB
-
 spring.servlet.multipart.enabled=true
-# port? ??
+
+# port
 server.port = 5010
 
 spring.profiles.include=oauth,datasource
-# swagger ?? ?? ??
+
+# swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#security config
+spring.main.allow-bean-definition-overriding=true
