Add validation annotation and Add Vail annotation to controller and entity

--- a/build.gradle
+++ b/build.gradle
@@ -23,25 +23,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 	implementation 'junit:junit:4.13.2'
 	implementation 'mysql:mysql-connector-java'
-
 	// mustache 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
     implementation 'org.jetbrains:annotations:20.1.0'
     implementation 'org.jetbrains:annotations:20.1.0'
 	implementation 'org.jetbrains:annotations:20.1.0'
-
 	//commons-io 의존성 추가
 	implementation 'commons-io:commons-io:2.9.0'
-
 	//oauth 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-
 	// lombok 의존성 추가
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-
 	//swagger 의존성 추가
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
