Downgrade spring version for make mustache html and make index.mustache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,17 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.maxRequestSize=100MB
 spring.servlet.multipart.enabled=true
-
 # port
 server.port = 5010
 
 spring.profiles.include=oauth,datasource
-
 # swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
 #security config
 spring.main.allow-bean-definition-overriding=true
+#test oauth
+spring.security.oauth2.client.registration.google.client-id=test
+spring.security.oauth2.client.registration.google.client-secret=test
+spring.security.oauth2.client.registration.google.scope=profile,email
+#mustache
+server.servlet.encoding.force-response=true
