Update post.mustache, make post-update.mustache and WebConfig for display image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.security.oauth2.client.registration.google.client-secret=test
 spring.security.oauth2.client.registration.google.scope=profile,email
 #mustache
 server.servlet.encoding.force-response=true
+#images path
+images.path=file:///C:/Users/\uC774\uBB38\uD601/IdeaProjects/Used_Inst_market/images
+upload.path=/upload/**
