--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	//json databind 의존성 추가
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+	//queryDSL 의존성 추가
+	implementation 'com.querydsl:querydsl-jpa'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
